Fixed flooting toolbars z-index/opacity issues

--- a/css/activity.sass
+++ b/css/activity.sass
@@ -94,5 +94,3 @@
 
   margin: 10px
   padding: 0 0
-
-  transition: 0.25s ease opacity
